--- a/templates/parts/toggle-icon.hbs
+++ b/templates/parts/toggle-icon.hbs
@@ -1,5 +1,5 @@
 <span class="toggle-icon {{blockClass}}">
-	<input type="checkbox" class="hidden-toggle" name="{{targetKey}}" {{checked isToggled}} />
+	<input  data-dtype="Boolean" type="checkbox" class="hidden-toggle" name="{{targetKey}}" {{checked isToggled}} />
 	<i class="toggle-on {{activeClass}}"></i>
 	<i class="toggle-off {{inactiveClass}}"></i>
 	{{#if tooltip}}
