--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -47,15 +47,15 @@
         </div>
         <div class="crew-tier">
           {{#multiboxes data.tier}}
-          <input id="crew-{{actor._id}}-tier-0" type="radio" name="data.tier" value="0">
+          <input data-dtype="Number" id="crew-{{actor._id}}-tier-0" type="radio" name="data.tier" value="0">
           <label for="crew-{{actor._id}}-tier-0" class="gray-label">{{localize "BITD.Tier"}}</label>
-          <input id="crew-{{actor._id}}-tier-1" type="radio" name="data.tier" value="1">
+          <input data-dtype="Number" id="crew-{{actor._id}}-tier-1" type="radio" name="data.tier" value="1">
           <label for="crew-{{actor._id}}-tier-1"></label>
-          <input id="crew-{{actor._id}}-tier-2" type="radio" name="data.tier" value="2">
+          <input data-dtype="Number" id="crew-{{actor._id}}-tier-2" type="radio" name="data.tier" value="2">
           <label for="crew-{{actor._id}}-tier-2"></label>
-          <input id="crew-{{actor._id}}-tier-3" type="radio" name="data.tier" value="3">
+          <input data-dtype="Number" id="crew-{{actor._id}}-tier-3" type="radio" name="data.tier" value="3">
           <label for="crew-{{actor._id}}-tier-3"></label>
-          <input id="crew-{{actor._id}}-tier-4" type="radio" name="data.tier" value="4">
+          <input data-dtype="Number" id="crew-{{actor._id}}-tier-4" type="radio" name="data.tier" value="4">
           <label for="crew-{{actor._id}}-tier-4"></label>
           {{/multiboxes}}
         </div>
@@ -69,31 +69,31 @@
     <div id="crew-{{actor._id}}-reputation" class="crew-reputation">
       {{#multiboxes data.reputation}}
       {{#repturf data.turfs_amount}}
-      <input type="radio" id="crew-{{../actor._id}}-reputation-0" name="data.reputation" value="0" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-0" name="data.reputation" value="0">
       <label class="gray-label" for="crew-{{../actor._id}}-reputation-0">{{localize "BITD.Rep"}}</label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-1" name="data.reputation" value="1" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-1" name="data.reputation" value="1">
       <label for="crew-{{../actor._id}}-reputation-1"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-2" name="data.reputation" value="2" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-2" name="data.reputation" value="2">
       <label for="crew-{{../actor._id}}-reputation-2"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-3" name="data.reputation" value="3" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-3" name="data.reputation" value="3">
       <label for="crew-{{../actor._id}}-reputation-3"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-4" name="data.reputation" value="4" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-4" name="data.reputation" value="4">
       <label for="crew-{{../actor._id}}-reputation-4"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-5" name="data.reputation" value="5" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-5" name="data.reputation" value="5">
       <label for="crew-{{../actor._id}}-reputation-5"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-6" name="data.reputation" value="6" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-6" name="data.reputation" value="6">
       <label for="crew-{{../actor._id}}-reputation-6"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-7" name="data.reputation" value="7" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-7" name="data.reputation" value="7">
       <label for="crew-{{../actor._id}}-reputation-7"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-8" name="data.reputation" value="8" dtype="Radio">
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-8" name="data.reputation" value="8">
       <label for="crew-{{../actor._id}}-reputation-8"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-9" name="data.reputation" value="9" dtype="Radio" >
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-9" name="data.reputation" value="9" >
       <label for="crew-{{../actor._id}}-reputation-9"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-10" name="data.reputation" value="10" dtype="Radio" >
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-10" name="data.reputation" value="10" >
       <label for="crew-{{../actor._id}}-reputation-10"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-11" name="data.reputation" value="11" dtype="Radio" >
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-11" name="data.reputation" value="11" >
       <label for="crew-{{../actor._id}}-reputation-11"></label>
-      <input type="radio" id="crew-{{../actor._id}}-reputation-12" name="data.reputation" value="12" dtype="Radio" >
+      <input data-dtype="Number" type="radio" id="crew-{{../actor._id}}-reputation-12" name="data.reputation" value="12" >
       <label for="crew-{{../actor._id}}-reputation-12"></label>
       {{/repturf}}
       {{/multiboxes}}
@@ -109,14 +109,14 @@
         </div>
         <div class="crew-coins coins-hands">
           {{#multiboxes data.coins.value}}
-          <input type="radio" id="crew-{{actor._id}}-coins-hands-0" name="data.coins.value" value="0" checked="checked">
-          <input type="radio" id="crew-{{actor._id}}-coins-hands-1" name="data.coins.value" value="1">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-coins-hands-0" name="data.coins.value" value="0" checked="checked">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-coins-hands-1" name="data.coins.value" value="1">
           <label for="crew-{{actor._id}}-coins-hands-1"></label>
-          <input type="radio" id="crew-{{actor._id}}-coins-hands-2" name="data.coins.value" value="2">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-coins-hands-2" name="data.coins.value" value="2">
           <label for="crew-{{actor._id}}-coins-hands-2"></label>
-          <input type="radio" id="crew-{{actor._id}}-coins-hands-3" name="data.coins.value" value="3">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-coins-hands-3" name="data.coins.value" value="3">
           <label for="crew-{{actor._id}}-coins-hands-3"></label>
-          <input type="radio" id="crew-{{actor._id}}-coins-hands-4" name="data.coins.value" value="4">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-coins-hands-4" name="data.coins.value" value="4">
           <label for="crew-{{actor._id}}-coins-hands-4"></label>
           {{/multiboxes}}
         </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="crew-coins coins-vault">
           {{#multiboxes data.vault.value}}
-          <input type="radio" id="crew-{{actor._id}}-coins-vault-0" name="data.vault.value" value="0" checked="checked">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-coins-vault-0" name="data.vault.value" value="0" checked="checked">
           {{#crew_vault_coins data.vault.max}}{{/crew_vault_coins}}
           {{/multiboxes}}
         </div>
@@ -145,25 +145,25 @@
 
       <div id="crew-{{actor._id}}-heat" class="big-teeth">
         {{#multiboxes data.heat}}
-        <input type="radio" id="crew-{{actor._id}}-heat-0" name="data.heat" value="0" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-0" name="data.heat" value="0">
         <label class="gray-label" for="crew-{{actor._id}}-heat-0">{{localize "BITD.Heat"}}</label>
-        <input type="radio" id="crew-{{actor._id}}-heat-1" name="data.heat" value="1" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-1" name="data.heat" value="1">
         <label for="crew-{{actor._id}}-heat-1"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-2" name="data.heat" value="2" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-2" name="data.heat" value="2">
         <label for="crew-{{actor._id}}-heat-2"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-3" name="data.heat" value="3" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-3" name="data.heat" value="3">
         <label for="crew-{{actor._id}}-heat-3"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-4" name="data.heat" value="4" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-4" name="data.heat" value="4">
         <label for="crew-{{actor._id}}-heat-4"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-5" name="data.heat" value="5" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-5" name="data.heat" value="5">
         <label for="crew-{{actor._id}}-heat-5"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-6" name="data.heat" value="6" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-6" name="data.heat" value="6">
         <label for="crew-{{actor._id}}-heat-6"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-7" name="data.heat" value="7" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-7" name="data.heat" value="7">
         <label for="crew-{{actor._id}}-heat-7"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-8" name="data.heat" value="8" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-8" name="data.heat" value="8">
         <label for="crew-{{actor._id}}-heat-8"></label>
-        <input type="radio" id="crew-{{actor._id}}-heat-9" name="data.heat" value="9" dtype="Radio">
+        <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-heat-9" name="data.heat" value="9">
         <label for="crew-{{actor._id}}-heat-9"></label>
         {{/multiboxes}}
 
@@ -173,14 +173,14 @@
         <div id="crew-{{actor._id}}-wanted" class="small-teeth-wrap">
           <label class="gray-label" for="crew-{{actor._id}}-wanted-counter-0">{{localize "BITD.Wanted"}}</label>
           <div class="small-teeth">
-            <input type="radio" id="crew-{{actor._id}}-wanted-counter-0" name="data.wanted" value="0">
-            <input type="radio" id="crew-{{actor._id}}-wanted-counter-1" name="data.wanted" value="1">
+            <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-wanted-counter-0" name="data.wanted" value="0">
+            <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-wanted-counter-1" name="data.wanted" value="1">
             <label for="crew-{{actor._id}}-wanted-counter-1"></label>
-            <input type="radio" id="crew-{{actor._id}}-wanted-counter-2" name="data.wanted" value="2">
+            <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-wanted-counter-2" name="data.wanted" value="2">
             <label for="crew-{{actor._id}}-wanted-counter-2"></label>
-            <input type="radio" id="crew-{{actor._id}}-wanted-counter-3" name="data.wanted" value="3">
+            <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-wanted-counter-3" name="data.wanted" value="3">
             <label for="crew-{{actor._id}}-wanted-counter-3"></label>
-            <input type="radio" id="crew-{{actor._id}}-wanted-counter-4" name="data.wanted" value="4">
+            <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-wanted-counter-4" name="data.wanted" value="4">
             <label for="crew-{{actor._id}}-wanted-counter-4"></label>
           </div>
         </div>
@@ -216,7 +216,7 @@
         <div id="crew-{{actor._id}}-xp" class="big-teeth">
           <label class="gray-label" for="crew-{{actor._id}}-experience-0">{{localize "BITD.CrewXP"}}</label>
           {{#multiboxes data.experience}}
-          <input type="radio" id="crew-{{actor._id}}-experience-0" name="data.experience" value="0" dtype="Radio">
+          <input data-dtype="Number" type="radio" id="crew-{{actor._id}}-experience-0" name="data.experience" value="0">
           {{#crew_experience actor}}{{/crew_experience}}
           {{/multiboxes}}
         </div>
