--- a/templates/items/crew_type.hbs
+++ b/templates/items/crew_type.hbs
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}} crew-type" autocomplete="off">
   <header class="sheet-header">
       <img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
       <div class="header-fields">
@@ -7,12 +7,13 @@
   </header>
 
   <section class="flex-vertical">
-    <label class="label-stripe">{{localize "BITD.Description"}}</label>
-    {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+		<textarea class="crew-type-description" name="data.description" placeholder="(Description)" {{~#unless editable}} readonly{{/unless}}>{{data.description}}</textarea>
     <label class="label-stripe">{{localize "BITD.ExpClues"}}</label>
     {{editor content=data.experience_clues target="data.experience_clues" button=true owner=owner editable=editable}}
 
     <label class="label-stripe">{{localize "BITD.Turf"}}</label>
-    <div id="turf-container">{{> "systems/eunos-blades/templates/parts/turf-list.hbs" turfs_data=data.turfs can_edit=true editable=editable}}</div>
+    <div id="turf-container">
+			{{> "systems/eunos-blades/templates/parts/turf-list.hbs" turfs_data=data.turfs can_edit=true editable=editable}}
+		</div>
   </section>
 </form>
