--- a/templates/items/crew_upgrade.hbs
+++ b/templates/items/crew_upgrade.hbs
@@ -13,7 +13,7 @@
     <label class="label-stripe">{{localize "BITD.CrewType"}}</label>
     <input type="text" name="data.class" value="{{data.class}}">
     <label class="label-stripe">{{localize "BITD.Price"}}</label>
-    <input type="text" name="data.price" value="{{data.price}}">
+    <input  data-dtype="Number"  type="text" name="data.price" value="{{data.price}}">
     {{#if isGM}}
       <div class="label-stripe">{{localize "BITD.Effects"}}</div>
       <div id="effects">{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}</div>
