--- a/scss/emu-overrides/_vars.scss
+++ b/scss/emu-overrides/_vars.scss
@@ -53,11 +53,11 @@
 
 	--blades-white: rgb(200, 200, 200);
 	--blades-white-bright: rgb(255, 255, 255);
-	--blades-black: #101010;
-	--blades-black-dark: #000;
-	--blades-grey-bright: #AAA;
-	--blades-grey: #777;
-	--blades-grey-dark: #444;
+	--blades-black: rgb(16, 16, 16);
+	--blades-black-dark: rgb(0, 0, 0);
+	--blades-grey-bright: rgb(170, 170, 170);
+	--blades-grey: rgb(119, 119, 119);
+	--blades-grey-dark: rgb(68, 68, 68);
 	--blades-coin-gold: rgb(171, 146, 84);
 	--blades-coin-gold-bright: rgb(253, 212, 112);
 }
