--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ $hover-brightness: 0.8;
 
 // Utility imports
 @import 'import/mixin';
-@import 'fonts';
+@import './fonts.scss';
 
 //namespacing to avoid conflicts with other modules
 .eunos-blades {
@@ -48,6 +48,3 @@ $hover-brightness: 0.8;
 
 // Override emu styles
 @import './emu-overrides';
-
-// Override tinymce styles
-@import './tinymce';
